Created Category Entries in ConfigureStructureList, added random variation options